--- a/indiapets/templates/feedback/feedback.html
+++ b/indiapets/templates/feedback/feedback.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 {% block body %}
-    
+    <div>
+
+    </div>
+    <form>
+        <input type='text' >
+    </form>
 {% endblock %}
