--- a/indiapets/templates/feedback/feedback.html
+++ b/indiapets/templates/feedback/feedback.html
@@ -6,24 +6,32 @@
             .Options{
                 display: none;
                 list-style: none;
-                background-color: royalblue;
+                background-color:rgba(7, 79, 100,0.5);
                 width: 20vw;
                 height: 6vw;
                 padding-top: 1%;
+               font-weight: 300;
             }
             form{
                 background-color: rgba(33, 133, 158, 0.493);
                 width: 40vw;
-                height: 20vw;
+                height: 25vw;
                 /* height: 100%; */
                 margin-left: 10%;
                 padding-left: 1%;
-                padding-top: 1%;
+                padding-top: 2%;
+                display: block;
+                border-radius: 2% 2% 2% 2%;
                 /* font-size: 1vw; */
             }
             form input[type='text']{
                 width:80%;
-                
+                height:60%;
+                border: none;
+                text-align: top;
+                overflow-y:scroll;
+                overflow-x:hidden;
+                margin-top: 1%;
             }
             form input[type='checkbox']{
                 border: none;
@@ -32,12 +40,15 @@
                 display: block;
                 font-size: 1vw;
             }
+            
         </style>
         
     </head>
     <div style="width: 70vw;margin-left: 15%;margin-top: 10%;color: rgb(255, 255, 255);">
-        <div>
 
+        <h1 style="color:rgba(6, 99, 87, 0.836) ;">More about us</h1>
+        <div style="color: gray;width: 30vw;">
+            Sit et legLorem ipsum dolor sit amet, est ei error insolens ullamcorper, ut erant aliquip quaerendum sed. Errem phaedrum id vix. Ea cibo nullam fuisset eam.ere alienum omittam, pri utinam nonumy at, malis tollit habemus est ad. Ea cibo nullam fuisset eam.
         </div>
         <form>
             <!-- <input type="text" value='   VineelRaj'readonly='readonly' style="border: none;"> -->
@@ -58,7 +69,7 @@
             Option = document.getElementsByClassName('Options')[0]
             if (Option.style.display == ''){
                 Option.style.display = 'block'
-                console.log('111111111')
+                // console.log('111111111')
             }
             else{
                 Option.style.display = ''
