--- a/indiapets/templates/feedback/feedback.html
+++ b/indiapets/templates/feedback/feedback.html
@@ -4,7 +4,7 @@
     <head>
         <style>
             .Options{
-                display: none;
+                /* display: none; */
                 list-style: none;
                 background-color:rgba(7, 79, 100,0.5);
                 width: 20vw;
@@ -52,8 +52,8 @@
         </div>
         <form>
             <!-- <input type="text" value='   VineelRaj'readonly='readonly' style="border: none;"> -->
-            <div></div>
-            <div onclick="Expand()" style='cursor:pointer;width: 5vw;background-color: rgb(7, 79, 100);text-align: center;'>options</div>
+            <!-- <div></div> -->
+            <div style='cursor:pointer;width: 5vw;background-color: rgb(7, 79, 100);text-align: center;'>options</div>
             <ul class ='Options'>
                 <li><input type='checkbox'/>Regarding Pets</li>
                 <li><input type='checkbox'/>Regarding Doctors</li>
