--- a/indiapets/templates/feedback/feedback.html
+++ b/indiapets/templates/feedback/feedback.html
@@ -10,12 +10,12 @@
                 width: 20vw;
                 height: 6vw;
                 padding-top: 1%;
-               font-weight: 300;
+                font-weight: 300;
             }
             form{
                 background-color: rgba(33, 133, 158, 0.493);
                 width: 40vw;
-                height: 25vw;
+                height: 35vw;
                 /* height: 100%; */
                 margin-left: 10%;
                 padding-left: 1%;
@@ -24,14 +24,35 @@
                 border-radius: 2% 2% 2% 2%;
                 /* font-size: 1vw; */
             }
+            input[type='email']{
+                width:90%;
+                height: 10%;
+                border:ghostwhite;
+                border-radius: 2% 2% 2% 2%;
+                margin-bottom: 3%;
+            }
+            form input[type='submit']{
+                border: ghostwhite;
+                /* border-radius: 2% 2% 2% 2%; */
+                width: 7vw;
+                height: 2vw;
+                background-color: rgb(255, 255, 255);
+                color:rgb(6, 99, 87) ;
+                font-weight: 700;
+                margin-top: 1%;
+            }
             form input[type='text']{
-                width:80%;
-                height:60%;
+                width:90%;
+                height:50%;
                 border: none;
                 text-align: top;
                 overflow-y:scroll;
                 overflow-x:hidden;
                 margin-top: 1%;
+                margin-bottom: 1%;
+                border:ghostwhite;
+                padding-top: 0%;
+                border-radius: 2% 2% 2% 2%;
             }
             form input[type='checkbox']{
                 border: none;
@@ -44,11 +65,12 @@
         </style>
         
     </head>
-    <div style="width: 70vw;margin-left: 15%;margin-top: 10%;color: rgb(255, 255, 255);">
-
-        <h1 style="color:rgba(6, 99, 87, 0.836) ;">More about us</h1>
-        <div style="color: gray;width: 30vw;">
-            Sit et legLorem ipsum dolor sit amet, est ei error insolens ullamcorper, ut erant aliquip quaerendum sed. Errem phaedrum id vix. Ea cibo nullam fuisset eam.ere alienum omittam, pri utinam nonumy at, malis tollit habemus est ad. Ea cibo nullam fuisset eam.
+    <div style="width: 70vw;margin-left: 15%;margin-top: 10%;color: rgb(255, 255, 255);display: flex;">
+        <div>
+            <h1 style="color:rgba(6, 99, 87, 0.836) ;">More about us</h1>
+            <div style="color: gray;width: 30vw;">
+                Sit et legLorem ipsum dolor sit amet, est ei error insolens ullamcorper, ut erant aliquip quaerendum sed. Errem phaedrum id vix. Ea cibo nullam fuisset eam.ere alienum omittam, pri utinam nonumy at, malis tollit habemus est ad. Ea cibo nullam fuisset eam.
+            </div>
         </div>
         <form>
             <!-- <input type="text" value='   VineelRaj'readonly='readonly' style="border: none;"> -->
@@ -59,8 +81,8 @@
                 <li><input type='checkbox'/>Regarding Doctors</li>
                 <li><input type='checkbox'/>Regarding Information</li>
             </ul>
-            
-            <input type='text' placeholder="Give Your Feedback" required='required'/>
+            <input type="email" placeholder="    e.g., someone@gmail.com">
+            <input type='text' placeholder="    Give Your Feedback" required='required'/>
             <input type="submit" value="Submit"/> 
         </form>
     </div>
