--- a/indiapets/templates/base.html
+++ b/indiapets/templates/base.html
@@ -7,6 +7,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -17,7 +18,38 @@
    {% endblock %}
 
    <style>
-      html {scroll-behavior: smooth;}
+      html {
+         scroll-behavior: smooth;
+      }
+
+      .dropdown-content a:hover {
+         background-color: #ddd;
+      }
+
+      .dropdown:hover .dropdown-content {
+         display: block;
+      }
+
+      .dropdown {
+         position: relative;
+         display: inline-block;
+      }
+
+      .dropdown-content {
+         display: none;
+         position: absolute;
+         background-color: #f1f1f1;
+         min-width: 160px;
+         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+         z-index: 1;
+      }
+
+      .dropdown-content a {
+         color: black;
+         padding: 12px 16px;
+         text-decoration: none;
+         display: block;
+      }
    </style>
 
 </head>
@@ -36,7 +68,20 @@
 
          <ul class="navbar-nav  ml-auto">
             <li><a class="nav-link" href="/">Home </a></li>
-            <li><a class="nav-link" href="/seller/pets_sell/">Sell </a></li>
+            <!-- <li><a class="nav-link" href="/seller/pets_sell/">Sell </a></li> -->
+            <li>
+
+               <div class="dropdown">
+                  <a class="dropbtn nav-link">Sell </a>
+                  <div class="dropdown-content">
+                     <a href="/seller/pets_sell/">Sell Pets</a>
+                     <a href="/seller/seller-data/">Seller Profile</a>
+                  </div>
+               </div>
+
+            </li>
+
+
             <li><a class="nav-link" href='/accounts/logout/'>Logout</a></li>
 
          </ul>
