--- a/indiapets/templates/seller/seller_details.html
+++ b/indiapets/templates/seller/seller_details.html
@@ -1,19 +1,90 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% load static %}
+{% block head %}
+<style>
+        .flip-card {
+                background-color: transparent;
+                width: 300px;
+                height: 300px;
+                perspective: 1000px;
+        }
 
+        .flip-card-inner {
+                position: relative;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                transition: transform 0.6s;
+                transform-style: preserve-3d;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        }
+
+        .flip-card:hover .flip-card-inner {
+                transform: rotateY(180deg);
+        }
+
+        .flip-card-front,
+        .flip-card-back {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                -webkit-backface-visibility: hidden;
+                backface-visibility: hidden;
+        }
+
+        .flip-card-front {
+                background-color: #bbb;
+                color: black;
+        }
+
+        .flip-card-back {
+                background-color: rgba(250, 253, 247, 0.87);
+                color: black;
+                transform: rotateY(180deg);
+        }
+</style>
+{% endblock %}
 {% block body %}
 <br><br>
-{% for i in seller_data %}
-        
-        <img src="/media/{{i.pet_image}}" alt="a" style="width: 180px;height: 180px;"><br>
-        {{i.pet_name}}
-        {{i.pet_breed}}
-        {{i.pet_age}}
-        {{i.pet_gender}}
-        {{i.pet_price}}
-        {{i.pet_description}}
+<h1 class="text-center">Welcome to India Pets! India’s First Online Pet and Farming Animals, Birds Store
+        <hr>
+</h1>
+<br><br>
 
-{% endfor %}
+
+<div class="container">
+        <div class="row">
+
+                {% for i in seller_data %}
+                <div class="col-xl-4 col-lg-4">
+                        <div class="flip-card">
+                                <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                                <img src="/media/{{i.pet_image}}" alt="Avatar"
+                                                        style="width:300px;height:300px;">
+
+                                                <h4>{{i.pet_breed}}</h4>
+                                        </div>
+                                        <div class="flip-card-back ">
+                                                <br><br>
+                                                Age:<span class="text-danger">{{i.pet_age}}</span> <br>
+                                                Gender:<span class="text-danger">{{i.pet_gender}} </span><br>
+                                                Price :<span class="text-danger">{{i.pet_price}}</span>
+                                                <p></p><br>
+                                                <p class="text-primary">{{i.pet_description}}</p>
+                                        </div>
+                                </div>
+
+                        </div>
+                        <br><br><br><br>
+                </div>
+                {% endfor %}
+
+        </div>
+
+</div>
+
+
 
 {% endblock %}
