--- a/indiapets/templates/pets/breed_info.html
+++ b/indiapets/templates/pets/breed_info.html
@@ -37,7 +37,7 @@
           {# <div style="font-size:40px;" class="bg-primary text-white pl-3">Breed Info</div> #}
 
 
-           <img class="card-img-top" src="{% static 'images/'|add:breed.breed_name|add:'.jpeg' %}" alt="Card image cap" width="50" height="200"
+           <img class="card-img-top" src="{% static '/pets/images/'|add:breed.breed_name|add:'.jpeg' %}" alt="Card image cap" width="50" height="200"
            <ul style="margin-left: -30px">
                             <li style="margin-top:30px">Breed Name:{{breed.breed_name}}</li>
                             <li>Lifespan:{{breed.lifespan}}</li>
