--- a/indiapets/templates/feedback/feedback.html
+++ b/indiapets/templates/feedback/feedback.html
@@ -11,6 +11,8 @@
                 height: 6vw;
                 padding-top: 1%;
                 font-weight: 300;
+                overflow-y: scroll;
+                scroll-behavior: smooth;
             }
             form{
                 background-color: rgba(33, 133, 158, 0.493);
@@ -28,7 +30,7 @@
                 width:90%;
                 height: 10%;
                 border:ghostwhite;
-                border-radius: 2% 2% 2% 2%;
+                border-radius: 1% 1% 1% 1%;
                 margin-bottom: 3%;
             }
             form input[type='submit']{
@@ -77,6 +79,7 @@
             <!-- <div></div> -->
             <div style='cursor:pointer;width: 5vw;background-color: rgb(7, 79, 100);text-align: center;'>options</div>
             <ul class ='Options'>
+                <li>Click on the checkbox</li>
                 <li><input type='checkbox'/>Regarding Pets</li>
                 <li><input type='checkbox'/>Regarding Doctors</li>
                 <li><input type='checkbox'/>Regarding Information</li>
