database hosted on AWS

--- a/indiapets/templates/base.html
+++ b/indiapets/templates/base.html
@@ -3,12 +3,12 @@
 <html>
 
 <head>
-   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
+   <!-- 
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
    <meta charset="utf-8"> -->
@@ -16,8 +16,8 @@
    <meta charset="utf-8">
 
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-   <meta name="description" content="">
-   <meta name="author" content="">
+   <meta name="description" content="Pets Sell">
+   <meta name="author" content="India Pets">
    <title>India Pets</title>
 
    <link href="../../../fonts.googleapis.com/css1e73.css?family=Open+Sans:400,700%7CQuicksand:400,500,700"
