--- a/indiapets/templates/pets/landing_page.html
+++ b/indiapets/templates/pets/landing_page.html
@@ -461,11 +461,11 @@
             <div class="isotope-item">
                 <div class="gallery-thumb">
 
-                <a href="{% url "pets:all-breed" 1 %}" title="You can add caption to pictures.">
+                <a href="#" title="You can add caption to pictures.">
                     <img class="img-fluid" src="{% static 'pets/img/gallery/gallery1.jpg' %}">
                 
 
-                    {% comment %} <span class="overlay-mask"></span> {% endcomment %}
+                     <span class="overlay-mask"></span> 
                 </a>
                 </div>
             </div>
