--- a/indiapets/templates/pets/all_pets.html
+++ b/indiapets/templates/pets/all_pets.html
@@ -5,8 +5,7 @@
 {% block head %}
 
 <style>
-
-.flip-card {
+        .flip-card {
                 background-color: transparent;
                 width: 300px;
                 height: 300px;
@@ -46,42 +45,35 @@
                 color: black;
                 transform: rotateY(180deg);
         }
-        
-      </style>
+</style>
 {% endblock %}
 
 {% block body %}
 
 <br><br><br><br><br><br><br>
-      
-      <div class="container">
+
+<div class="container">
         <div class="row">
 
                 {% for i in pet_s %}
                 <div class="col-xl-4 col-lg-4">
-                        <a href="{% url "pets:all-breed" i.animal_id %}">
+                        <a href="{{i.animal_name}}">
 
-                        <div class="flip-card">
-                                <div class="flip-card-inner">
-                                        <div class="flip-card-front">
-                                                
-                                                <img src="{% static '/pets/images/'|add:i.animal_name|add:'.jpeg' %}" alt="Avatar"
-                                                        style="width:300px;height:300px;">
-                                                
-                                                {% comment %} <h4>{{i.pet_breed}}</h4> {% endcomment %}
+                                <div class="flip-card">
+                                        <div class="flip-card-inner">
+                                                <div class="flip-card-front">
+
+                                                        <img src="{% static '/pets/images/'|add:i.animal_name|add:'.jpeg' %}"
+                                                                alt="Avatar" style="width:300px;height:300px;">
+
+                                                </div>
+                                                <div class="flip-card-back ">
+                                                        <br><br><br><br>
+                                                        <h2 class="text-danger">{{i.animal_name}}</h2> <br>
+                                                </div>
                                         </div>
-                                        <div class="flip-card-back ">
-                                                <br><br><br><br>
-                                                <h2 class="text-danger">{{i.animal_name}}</h2> <br>
-                                             
-                                                {% comment %} Gender:<span class="text-danger">{{i.pet_gender}} </span><br>
-                                                Price :<span class="text-danger">{{i.pet_price}}</span> {% endcomment %}
-                                                <p></p><br>
-                                                {% comment %} <p class="text-primary">{{i.pet_description}}</p> {% endcomment %}
-                                        </div>
+
                                 </div>
-
-                        </div>
                         </a>
                         <br><br><br><br>
                 </div>
@@ -92,34 +84,4 @@
 </div>
 
 
-
-
-      <!-- Optional JavaScript -->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-      <script>
-         $(document).ready(function() {
-          // executes when HTML-Document is loaded and DOM is ready
-
-           $( ".card" ).hover(
-           function() {
-             $(this).addClass('shadow-lg').css('cursor', 'pointer');
-           }, function() {
-             $(this).removeClass('shadow-lg');
-           }
-         );
-
-         // document ready
-         });
-
-      </script>
-
-
-
-      {% endblock %}
+{% endblock %}
