--- a/doctor/templates/base.html
+++ b/doctor/templates/base.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md  navbar-dark bg-dark fixed-top" style="background-color:#f5f5f5">
-        <div class="navbar-header">
-            <a class="navbar-brand" style="font-family:'Roboto-Bold-eot'" href="/">&nbsp;India Pets </a>
-        </div>
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color fixed-top" style="background-color:#f5f5f5">
+        <a class="navbar-brand article"  href="/"> <span class="text-danger"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+</span> Vetinary</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,8 +48,8 @@
             <ul class="navbar-nav ml-auto">
                 <li><a class="nav-link" href="/">Home </a></li>
 
-                <li><a class="nav-link" href="/accounts/signup/">Register </a></li>
-                <li><a class="nav-link" href='/accounts/login/'>Login </a></li>
+                <li><a class="nav-link" href="/2/">Profile </a></li>
+                <li><a class="nav-link" href='/accounts/login/'>Logout </a></li>
             </ul>
             {% endif %}
         </div>
