--- a/indiapets/templates/base.html
+++ b/indiapets/templates/base.html
@@ -140,7 +140,7 @@
                      </li>
                       <li class="nav-item">
 {#                        <a class="nav-link" href="index-2.html">Home#}
-                        <a class="nav-link" href="{% url 'pets:all_pets' %}">Adopt
+                        <a class="nav-link" href="{% url 'adoption:adoption' %}">Adopt
                         </a>
                      </li>
 
