--- a/indiapets/templates/payment/process.html
+++ b/indiapets/templates/payment/process.html
@@ -14,7 +14,7 @@
             <div class="col-lg-5 col-md border warning-border">
                 <div class="card text-center single-pricing-pack  bg-gradient-info">
                     <div class="card-header py-5 border-0 pricing-header ">
-                        <div class="h1 text-center mb-0"><span class="price font-weight-bolder">{{price}} &#8377;</span></div>
+                        <div class="h1 text-center mb-0"><span class="price font-weight-bolder">$ {{price}} </span></div>
                         <span class="h6 text-muted">Buy Your Pet</span>
                     </div>
                     <!-- <div class="card-body"> -->
