--- a/indiapets/templates/pets/info.html
+++ b/indiapets/templates/pets/info.html
@@ -66,6 +66,7 @@
                                     <li class="h7">Price: <span>{{i.pet_price}} &#8377;</span></li>
                                     <li class="h7">Healthy: <span>{{i.is_verified}}</span></li>
                                     <li class="h7">Life span: <span>{{j.lifespan}} years</span></li>
+                                    <li class="h7">Doc: <a href="http://127.0.0.1:8000/media/pdf/health.pdf"><span>Link</span></li>
                                 </ul>
                             </div>
                             <!-- /div-->
