--- a/indiapets/templates/base.html
+++ b/indiapets/templates/base.html
@@ -117,7 +117,7 @@
       <div class="row">
          <div class="navbar container-fluid">
             <div class="container ">
-               <a class="navbar-brand" href="index-2.html">
+               <a class="navbar-brand" href="/">
                   <i class="flaticon-dog-20"></i><span>India Pets</span>
                </a>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -129,45 +129,33 @@
                <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item">
-{#                        <a class="nav-link" href="index-2.html">Home#}
+                        {#                        <a class="nav-link" href="/">Home#}
                         <a class="nav-link" href="{% url 'pets:landing' %}">Home
                         </a>
                      </li>
-                      <li class="nav-item">
-{#                        <a class="nav-link" href="index-2.html">Home#}
+                     <li class="nav-item">
+                        {#                        <a class="nav-link" href="index-2.html">Home#}
                         <a class="nav-link" href="{% url 'pets:all_pets' %}">Buy
                         </a>
                      </li>
-                      <li class="nav-item">
-{#                        <a class="nav-link" href="index-2.html">Home#}
+                     <li class="nav-item">
+                        {#                        <a class="nav-link" href="index-2.html">Home#}
                         <a class="nav-link" href="{% url 'adoption:adoption' %}">Adopt
                         </a>
                      </li>
 
                      <!-- menu item -->
-                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="gallery-dropdown" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
-                           Gallery
+                     <li class="nav-item">
+                        <a class="nav-link" href="/seller/pets_sell/">Sell
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="gallery-dropdown">
-                           <a class="dropdown-item" href="gallery.html">Gallery Style 1</a>
-                           <a class="dropdown-item" href="gallery2.html">Gallery Style 2</a>
-                        </div>
                      </li>
                      <!-- menu item -->
-                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="contact-dropdown" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
-                           Contact
+                     <li class="nav-item">
+                        <a class="nav-link" href="#">Contact
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="contact-dropdown">
-                           <a class="dropdown-item" href="contact.html">Contact Style 1</a>
-                           <a class="dropdown-item" href="contact2.html">Contact Style 2</a>
-                        </div>
                      </li>
                      <!-- menu item -->
-                     <li class="nav-item dropdown">
+                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="others-dropdown" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">
                            Other pages
@@ -179,7 +167,7 @@
                            <a class="dropdown-item" href="elements.html">Elements Page</a>
                            <a class="dropdown-item" href="404.html">404 Page</a>
                         </div>
-                     </li>
+                     </li> -->
                   </ul>
                   <!--/ul -->
                </div>
@@ -241,7 +229,7 @@
    {% block body %}
    http://127.0.0.1:8000/
 
-   
+
    {% endblock %}
 
    <!-- Bootstrap core & Jquery -->
@@ -275,49 +263,49 @@
 
    <footer class="text-light">
       <div class="container">
-          <div class="row">
-              <div class="col-lg-6">
-                  <a class="navbar-brand" href="index-2.html"><i class="flaticon-dog-20"></i><span>India Pets</span></a>
-                  <p class="mt-3"></p>
-              </div>
-              <!--/ col-lg -->
-              <div class="col-lg-3">
-                  <h6><i class="fas fa-envelope margin-icon"></i>Contact Us</h6>
-                  <ul class="list-unstyled">
-                      <li>+91 7007121359</li>
-                      <li><a href="mailto:email@yoursite.com">indiapets@gmail.com</a></li>
-                      <li>City-Varanasi </li>
-                      <li>State-Uttar Pradesh</li>
-                  </ul>
-                  <!--/ul -->
-              </div>
-              <!--/ col-lg -->
-              <div class="col-lg-3">
-                  <h6><i class="far fa-clock margin-icon"></i>Working Hours</h6>
-                  <ul class="list-unstyled">
-                      <li>Open 9am - 10pm</li>
-                      <li>Holidays - Closed</li>
-                      <li>Weekends - Closed</li>
-                  </ul>
-                  <!--/ul -->
-              </div>
-              <!--/ col-lg -->
-          </div>
-          <!--/ row-->
-          <!--      <div class="row">-->
-          <!--         <div class="credits col-sm-12">-->
-          <!--            <p>Copyright 2018 / Designed by <a href="../../../external.html?link=http://www.ingridkuhn.com/">Ingrid Kuhn</a></p>-->
-          <!--         </div>-->
-          <!--      </div>-->
-          <!--/ row -->
+         <div class="row">
+            <div class="col-lg-6">
+               <a class="navbar-brand" href="index-2.html"><i class="flaticon-dog-20"></i><span>India Pets</span></a>
+               <p class="mt-3"></p>
+            </div>
+            <!--/ col-lg -->
+            <div class="col-lg-3">
+               <h6><i class="fas fa-envelope margin-icon"></i>Contact Us</h6>
+               <ul class="list-unstyled">
+                  <li>+91 7007121359</li>
+                  <li><a href="mailto:email@yoursite.com">indiapets@gmail.com</a></li>
+                  <li>City-Varanasi </li>
+                  <li>State-Uttar Pradesh</li>
+               </ul>
+               <!--/ul -->
+            </div>
+            <!--/ col-lg -->
+            <div class="col-lg-3">
+               <h6><i class="far fa-clock margin-icon"></i>Working Hours</h6>
+               <ul class="list-unstyled">
+                  <li>Open 9am - 10pm</li>
+                  <li>Holidays - Closed</li>
+                  <li>Weekends - Closed</li>
+               </ul>
+               <!--/ul -->
+            </div>
+            <!--/ col-lg -->
+         </div>
+         <!--/ row-->
+         <!--      <div class="row">-->
+         <!--         <div class="credits col-sm-12">-->
+         <!--            <p>Copyright 2018 / Designed by <a href="../../../external.html?link=http://www.ingridkuhn.com/">Ingrid Kuhn</a></p>-->
+         <!--         </div>-->
+         <!--      </div>-->
+         <!--/ row -->
       </div>
       <!--/ container -->
       <!-- Go To Top Link -->
       <div class="page-scroll hidden-sm hidden-xs">
-          <a href="#top" class="back-to-top"><i class="fa fa-angle-up"></i></a>
+         <a href="#top" class="back-to-top"><i class="fa fa-angle-up"></i></a>
       </div>
       <!--/page-scroll-->
-  </footer>
+   </footer>
 
 </body>
 
